--- a/Notelets/history.text
+++ b/Notelets/history.text
@@ -1,5 +1,13 @@
 1.2.14
 
+* Revised the (internal) URL layout of the standalone example.
+
+* Changed the default metadata settings (to 'all').
+
+* Eliminated the use of stripHas.
+
+* xsd:date objects render without a time in the JSON rendering.
+
 * Revised the standalone examples: three variations of
   the (full) education config plus one hello-world.
 
