--- a/README
+++ b/README
@@ -21,4 +21,6 @@ are usually excrutiatingly slow to download.]
 Import into Eclipse using the multi-project import tool from:
 http://eclipse-tools.sourceforge.net/updates/
 
+Elda documentation lives in deliver-elda/src/main/webapp/lda-assets/docs/
+
 
