Added to the velocity renderer material a brief summary of the example rendering, with screenshot.

--- a/README
+++ b/README
@@ -64,8 +64,8 @@ RELEASING ELDA
   IN PARTICULAR, after consultation with other interested
   parties (eg Stuart), build a new EA webapp, put it up
   on staging, and check that the BW app works. It makes
-  many specific queries and the app working syas that
-  bery many of these (still) work.
+  many specific queries and the app working says that
+  very many of these (still) work.
 
   Ensure the release notes are up-to-date. The top
   entry in ReleaseNotes/latest.text should be marked 
