Provide link to version-specific documentation from release note

--- a/_posts/2014-03-24-release-1.2.31.md
+++ b/_posts/2014-03-24-release-1.2.31.md
@@ -2,6 +2,7 @@
 title: Elda release 1.2.31
 layout: post
 categories: release
+releaseVersion: 1.2.31
 ---
 
 Elda 1.2.31 ([ReleaseNotes/latest.text](ReleaseNotes/latest.text)) was
