--- a/_posts/2014-07-08-release-1.2.34.md
+++ b/_posts/2014-07-08-release-1.2.34.md
@@ -2,6 +2,7 @@
 title: Elda release 1.2.34
 layout: post
 categories: release
+releaseVersion: 1.2.34
 ---
 
 Elda 1.2.34 was released on 8th July 2014 (groupid `com.epimorphics.lda`,
