--- a/_posts/2014-07-30-release-1.2.35.md
+++ b/_posts/2014-07-30-release-1.2.35.md
@@ -2,6 +2,7 @@
 title: Elda release 1.2.35
 layout: post
 categories: release
+releaseVersion: 1.2.35
 ---
 
 Elda 1.2.35 was released on 30th July 2014 (groupid `com.epimorphics.lda`,
