--- a/_posts/2014-04-23-release-1.2.33.md
+++ b/_posts/2014-04-23-release-1.2.33.md
@@ -2,6 +2,7 @@
 title: Elda release 1.2.33
 layout: post
 categories: release
+releaseVersion: 1.2.33
 ---
 
 Elda 1.2.33 was released on 23rd April 2014 (groupid
