--- a/_posts/2014-11-12-release-1.3.0.md
+++ b/_posts/2014-11-12-release-1.3.0.md
@@ -2,6 +2,7 @@
 title: Elda release 1.3.0
 layout: post
 categories: release
+releaseVersion: 1.3.0
 ---
 
 Elda 1.3.0 was released on 12th November 2014 (groupid `com.epimorphics.lda`,
