--- a/_posts/2014-11-26-release-1.3.1.md
+++ b/_posts/2014-11-26-release-1.3.1.md
@@ -2,6 +2,7 @@
 title: Elda release 1.3.1
 layout: post
 categories: release
+releaseVersion: 1.3.1
 ---
 
 Elda 1.3.1 was released on 27th November 2014 (groupid `com.epimorphics.lda`,
