--- a/_posts/2015-01-13-release-1.3.2.md
+++ b/_posts/2015-01-13-release-1.3.2.md
@@ -1,3 +1,10 @@
+---
+title: Elda release 1.3.2
+layout: post
+categories: release
+releaseVersion: 1.3.2
+---
+
 Elda 1.3.2 was released on 12th January 2015 and contained
 fixes for issues #111 and #112. Due to a minor defect in
 its version identification, it was immediately superceded
