--- a/_posts/2015-01-14-release-1.3.3.md
+++ b/_posts/2015-01-14-release-1.3.3.md
@@ -1,2 +1,9 @@
+---
+title: Elda release 1.3.3
+layout: post
+categories: release
+releaseVersion: 1.3.3
+---
+
 Elda 1.3.3 was released on 12th January 2015 and corrected
 a mistake in Elda's version identification string.
