--- a/_posts/2014-11-26-release-1.3.1.md
+++ b/_posts/2014-11-26-release-1.3.1.md
@@ -10,4 +10,4 @@ artifactId and name `lda`, version 1.3.1), with some changes to the error-report
 behaviour.
 
 See
-[ReleaseNotes/latest.text](ReleaseNotes/latest.text) for more details.
+[ReleaseNotes/latest.text](http://epimorphics.github.io/elda/ReleaseNotes/latest.text) for more details.
