Corrected ReleaseNotes link in current post set. Probably should be automatced somehow. Also should make ReleaseNotes a .md file for styling and maybe compose complete file from fragments.

--- a/_posts/2014-03-24-release-1.2.31.md
+++ b/_posts/2014-03-24-release-1.2.31.md
@@ -10,3 +10,8 @@ released on 24th March 2014. Elda now allows cache expiry times to be
 attached to properties, endpoints, and APIs, generates `Expires:`
 headers appropriately, and respects those expiry times in its internal
 caches.
+
+
+See
+[ReleaseNotes/latest.text](http://epimorphics.github.io/elda/ReleaseNotes/latest.text) for more details.
+~     
