--- a/_posts/2014-04-23-release-1.2.33.md
+++ b/_posts/2014-04-23-release-1.2.33.md
@@ -10,3 +10,7 @@ Elda 1.2.33 was released on 23rd April 2014 (groupid
 corrects a problem with item endpoints which failed to find the
 requested item but did not generate a 404 response status. (Version .32
 was an intermediate release that incompletely resolved this issue.)
+
+See
+[ReleaseNotes/latest.text](http://epimorphics.github.io/elda/ReleaseNotes/latest.text) for more details.
+~     
