--- a/_posts/2014-07-08-release-1.2.34.md
+++ b/_posts/2014-07-08-release-1.2.34.md
@@ -11,5 +11,8 @@ been changed to Saxon 9.5.1-5. The mapping from strings to resource
 names for XSLT tenplates and the Velocity root has been made the same
 and is more precisely defined. It is now possible to specify on an
 endpoint or in a request URI the name of a non-default graph in the
-SPARQL endpoint's dataset. See
-[ReleaseNotes/latest.text](ReleaseNotes/latest.text) for more details.
+SPARQL endpoint's dataset. 
+
+See
+[ReleaseNotes/latest.text](http://epimorphics.github.io/elda/ReleaseNotes/latest.text) for more details.
+~     
