--- a/_posts/2014-07-30-release-1.2.35.md
+++ b/_posts/2014-07-30-release-1.2.35.md
@@ -6,5 +6,8 @@ releaseVersion: 1.2.35
 ---
 
 Elda 1.2.35 was released on 30th July 2014 (groupid `com.epimorphics.lda`,
-artifactId and name `lda`, version 1.2.35). See
-[ReleaseNotes/latest.text](ReleaseNotes/latest.text) for more details.
+artifactId and name `lda`, version 1.2.35). i
+
+See
+[ReleaseNotes/latest.text](http://epimorphics.github.io/elda/ReleaseNotes/latest.text) for more details.
+~     
