--- a/_posts/2014-11-12-release-1.3.0.md
+++ b/_posts/2014-11-12-release-1.3.0.md
@@ -10,4 +10,5 @@ artifactId and name `lda`, version 1.3.0), with a rewritten Velocity
 renderer.
 
 See
-[ReleaseNotes/latest.text](ReleaseNotes/latest.text) for more details.
+[ReleaseNotes/latest.text](http://epimorphics.github.io/elda/ReleaseNotes/latest.text) for more details.
+~     
