--- a/_posts/2015-01-13-release-1.3.2.md
+++ b/_posts/2015-01-13-release-1.3.2.md
@@ -10,3 +10,8 @@ fixes for issues #111 and #112. Due to a minor defect in
 its version identification, it was immediately superceded
 by Elda 1.3.3.
 
+
+See
+[ReleaseNotes/latest.text](http://epimorphics.github.io/elda/ReleaseNotes/latest.text) for more details.
+~     
+
