--- a/_posts/2015-01-14-release-1.3.3.md
+++ b/_posts/2015-01-14-release-1.3.3.md
@@ -7,3 +7,8 @@ releaseVersion: 1.3.3
 
 Elda 1.3.3 was released on 12th January 2015 and corrected
 a mistake in Elda's version identification string.
+
+
+See
+[ReleaseNotes/latest.text](http://epimorphics.github.io/elda/ReleaseNotes/latest.text) for more details.
+~     
