--- a/_posts/2015-01-15-release-1.3.4.md
+++ b/_posts/2015-01-15-release-1.3.4.md
@@ -8,6 +8,9 @@ releaseVersion: 1.3.4
 Elda 1.3.4 was released on 15th January 2015. Support for
 SPARQL 1.0, elda-bundled, and elda-system-tests has been
 dropped. The error-page rendering has been improved.
-For more details, see
 
-([ReleaseNotes/latest.text](ReleaseNotes/latest.text)) 
+
+See
+[ReleaseNotes/latest.text](http://epimorphics.github.io/elda/ReleaseNotes/latest.text) for more details.
+~     
+
