--- a/_posts/2015-05-08-release-1.3.9.md
+++ b/_posts/2015-05-08-release-1.3.9.md
@@ -1,4 +1,9 @@
-Elda release 1.3.9
+---
+title: Elda release 1.3.9
+layout: post
+categories: release
+releaseVersion: 1.3.9
+---
 
 [There is no Elda release 1.3.6, .7, .8, for technical reasons.]
 
@@ -7,3 +12,7 @@ each request is given a (non-persistent) ID and associated with
 its reponse. Logged URLs are configurable from the web.xml.
 Various bug-fixes and some new features for writers of velocity
 renderers.
+
+See
+[ReleaseNotes/latest.text](http://epimorphics.github.io/elda/ReleaseNotes/latest.text) for more details.
+
