Minor adjectment to .12's release _post.

--- a/_posts/2015-05-22-release-1.3.12.md
+++ b/_posts/2015-05-22-release-1.3.12.md
@@ -5,9 +5,11 @@ categories: release
 releaseVersion: 1.3.12
 ---
 
-Elda 1.3.12 was released on May 22th 2015. 
+Elda 1.3.12 was released on May 22th 2015. It supersedes
+all of .9 -- .11.
 
-A remaining bug in /api-config has been fixed.
+A remaining bug in /api-config has been fixed. Tomcat-6
+compatability has been restored.
 
 See
 [ReleaseNotes/latest.text](http://epimorphics.github.io/elda/ReleaseNotes/latest.text) for more details.
