Spotted and fixed little typoes.

--- a/_posts/2017-03-01-release-1.3.22.md
+++ b/_posts/2017-03-01-release-1.3.22.md
@@ -5,9 +5,9 @@ categories: release
 releaseVersion: 1.3.22
 ---
 
-Elda 1.3.22 was release on 1st March 2017.
+Elda 1.3.22 was released on 1st March 2017.
 
-Default value for exceptioIfEmpty is "no" for list
+Default value for exceptionIfEmpty is "no" for list
 endpoints and "yes" for item endpoints (rather
 than being the same for each).
 
