update documentation for 1.4.3.

--- a/_posts/2017-10-12-release-1.4.2.md
+++ b/_posts/2017-10-12-release-1.4.2.md
@@ -5,6 +5,10 @@ categories: release
 releaseVersion: 1.4.2
 ---
 
+(This release of Elda contains a bug in standalone
+ run from an executable jar. If you use standalone,
+ use 1.4.3 not 1.4.2.)
+
 Elda 1.4.2 was released on 12th October 2017.
 
 The embedded QConsole has been updated to be compatable
