FIX Post name format

--- a/_posts/2018-09-17-release-2.0.0.md
+++ b/_posts/2018-09-17-release-2.0.0.md
@@ -18,7 +18,7 @@ hence the major version update.
 
 * config files may contain #include lines, allowing configurations
     to be built from shared components. Changing a file that has been
-    #included will cause all configs that included it to be reloaded.
+    included will cause all configs that included it to be reloaded.
 
 * inverse properties can now appear in view specifications
 
