--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -7,3 +7,4 @@
 * Updated Apache Commons Libraries. In particular the `esc` variable in the Velocity context is now the static class `org.apache.commons.text.StringEscapeUtils`, which has different method names than the previous version.
 * Updated Velocity to version 2.4.1. This may require updates to custom templates. See the Velocity 2.x migration guide (https://velocity.apache.org/engine/2.4/upgrading.html#upgrading-from-velocity-1x-to-the-latest-2x-version-for-busy-people) for details.
 * Removed unused dependency on jsonld-java library.
+* Removed unused dependency on Lucene library.
